--- a/.github/workflows/trivy-fs.yml
+++ b/.github/workflows/trivy-fs.yml
@@ -1,15 +1,9 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: trivy-fs
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ "main" ]
   schedule:
     - cron: '24 14 * * 5'
@@ -20,32 +14,29 @@ permissions:
 jobs:
   scan-image:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read
+      security-events: write
+      actions: read
     name: scan-fs
     runs-on: "ubuntu-20.04"
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - shell: bash
-        run: |
-          ls -lha
-
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+        uses: aquasecurity/trivy-action@master
         with:
-          format: 'template'
+          format: 'sarif'
           scan-type: 'fs'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
           severity: 'MEDIUM,CRITICAL,HIGH'
+          debug: true
+          update: true
+          input: './'
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
-
